--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -1,9 +1,16 @@
 .footer {
     background: var(--color-7bf);
     padding: 64px 0;
+    @media only screen and (max-width: 1680px) {
+        padding: 50px 0;
+    }
     .footer-logo {
         max-width: 246px;
         min-width: 246px;
+        @media only screen and (max-width: 1680px) {
+            max-width: 200px;
+            min-width: 200px;
+        }
     }
     .footer-top {
         border-bottom: 1px solid rgba(255,255,255,0.4);
@@ -33,6 +40,9 @@
                     font-size: 20px;
                     font-weight: 400;
                     color: var(--color-white);
+                    @media only screen and (max-width: 1680px) {
+                        font-size: 17px;
+                    }
                     &:hover {
                         color: var(--color-52);
                     }
@@ -44,6 +54,9 @@
             font-weight: 400;
             color: var(--color-white);
             margin-bottom: 0;
+            @media only screen and (max-width: 1680px) {
+                font-size: 17px;
+            }
             span {
                 font-weight: 500;
             }
@@ -52,10 +65,16 @@
     .footer-menu {
         display: flex;
         gap: 56px;
+        @media only screen and (max-width: 1680px) {
+            gap: 40px;
+        }
         li {
             a {
                 color: var(--color-white);
                 font-size: 20px;
+                @media only screen and (max-width: 1680px) {
+                    font-size: 17px;
+                }
                 &:hover {
                     color: var(--color-52);
                 }
@@ -63,7 +82,36 @@
         }
     }
 }
-.newsletter-sec {
-    padding: 100px 0;
-    background: #006BDE;
+// responsive
+@media only screen and (max-width: 767px) {
+    .footer {
+    padding:40px 0;
+  }
+   .footer .footer-logo {
+    max-width: 140px;
+    min-width: 140px;
+  }
+  .footer .footer-top {
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  }
+  .footer .footer-menu li a,.footer .footer-bottom p,.footer .footer-bottom ul li a {
+    font-size: 15px;
+  }
+  .footer .footer-bottom {
+  flex-direction: column-reverse;
+  gap: 10px;
+}
+}
+@media only screen and (max-width: 575px) {
+     .footer {
+    padding: 30px 0;
+  }
+  .footer .footer-top {
+    flex-direction: column;
+    gap: 15px;
+  }
+  .footer .footer-menu {
+    gap: 20px;
+  }
 }
