--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -589,6 +589,7 @@
         background-repeat: no-repeat;
         background-size: auto;
         background-position: center;
+        transition: all 0.5s;
         @media only screen and (max-width: 1680px) {
             width: 65px;
             height: 65px;
@@ -598,6 +599,9 @@
             color: var(--color-7bf);
             opacity: 1;
             content: '';
+        }
+        &:hover {
+            box-shadow: 0 0 20px rgba(0,0,0,0.2);
         }
     }
     .slick-prev {
