--- a/src/assets/styles/_register.scss
+++ b/src/assets/styles/_register.scss
@@ -36,7 +36,9 @@
         @media only screen and (max-width: 1399px) {
             max-width: 450px;
         }
-
+        @media only screen and (max-width: 767px) {
+            max-width: 350px;
+        }
         img {
             width: 90%;
         }
@@ -734,6 +736,9 @@ p.sub-para {
         font-weight: 600;
         font-size: 40px;
         color: var(--color-white);
+        @media only screen and (max-width:767px) {
+            font-size: 30px;
+        }
     }
 }
 
@@ -771,6 +776,20 @@ p.sub-para {
     justify-content: center;
     border-radius: 24px;
     cursor: pointer;
+    transition: all 0.5s;
+    @media only screen and (max-width:767px) {
+        padding: 20px;
+        border-radius: 15px;
+        img {
+            width: 20px;
+        }
+    }
+    &:hover {
+        background: var(--color-7bf);
+        p {
+            color: var(--color-white);
+        }
+    }
     &.no-back {
         border: 0;
         padding: 0;
@@ -778,8 +797,23 @@ p.sub-para {
         gap: 24px;
         flex-direction: column;
         margin-bottom: 24px;
+        &:hover {
+            background: transparent;
+            p {
+                color: var(--color-black);
+            }
+        }
+        @media only screen and (max-width:1199px) {
+            gap: 15px;
+        }
+        @media only screen and (max-width:767px) {
+            margin-bottom: 15px;
+        }
         &.mb-100 {
             margin-bottom: 100px;
+            @media only screen and (max-width:767px) {
+                margin-bottom: 50px;
+            }
         }
         p {
             margin-bottom: 0;
@@ -788,6 +822,12 @@ p.sub-para {
             font-style: normal;
             color: var(--color-black);
             line-height: 1;
+            @media only screen and (max-width:1680px) {
+                font-size: 22px;
+            }
+            @media only screen and (max-width:1199px) {
+                font-size: 17px;
+            }
         }
     }
     span {
@@ -798,6 +838,10 @@ p.sub-para {
         display: flex;
         align-items: center;
         justify-content: center;
+        @media only screen and (max-width:767px) {
+            width: 40px;
+            height: 40px;
+        }
     }
 }
 .family-care-otr {
@@ -813,9 +857,37 @@ p.sub-para {
     gap: 24px;
     border-radius: 24px;
     margin-bottom: 24px;
+    &.mobile-start {
+        @media only screen and (max-width:575px) {
+            flex-direction: column;
+            .family-care-img {
+                margin: auto;
+            }
+            .family-care-txt {
+                h3,p {
+                    text-align: center;
+                }
+            }
+            .add-mmeber-form {
+                margin-top: 25px;
+            }
+        }
+    }
+    @media only screen and (max-width:767px) {
+        padding: 20px 15px;
+        gap: 15px;
+        border-radius: 15px;
+        margin-bottom: 15px;
+    }
     &.setup-2 {
         justify-content: flex-start;
         padding: 73px 40px;
+        @media only screen and (max-width:1399px) {
+            padding: 60px 30px;
+        }
+        @media only screen and (max-width:991px) {
+            padding: 40px 20px;
+        }
     }
     &:last-child {
         margin-bottom: 0;
@@ -827,7 +899,11 @@ p.sub-para {
         overflow: hidden;
         border-radius: 100%;
         background: #F6F6F6;
-
+        @media only screen and (max-width:1199px) {
+            width: 60px;
+            height: 60px;
+            min-width: 60px;
+        }
         img {
             width: 100%;
             height: 100%;
@@ -840,6 +916,12 @@ p.sub-para {
         font-weight: 600;
         color: var(--color-black);
         margin-bottom: 5px;
+        @media only screen and (max-width:1199px) {
+            font-size: 22px;
+        }
+        @media only screen and (max-width:767px) {
+            font-size: 18px;
+        }
     }
 
     .family-care-txt p {
@@ -855,6 +937,9 @@ p.sub-para {
         font-size: 14px;
         font-style: normal;
         color: #3D3D3D;
+        @media only screen and (max-width:767px) {
+            font-size: 13px;
+        }
     }
 }
 // .date-input.form-control {
@@ -880,6 +965,9 @@ p.sub-para {
     justify-content: center;
     gap: 24px;
     margin-top: 8px;
+    @media only screen and (max-width:991px) {
+        gap: 10px;
+    }
     button {
         border-radius: 24px;
         padding: 39px;
@@ -891,6 +979,24 @@ p.sub-para {
         border: 1px solid #CDE0FF;
         max-width: 380px;
         transition: all 0.5s;
+        @media only screen and (max-width: 1680px) {
+            font-size: 18px;
+        }
+        @media only screen and (max-width: 1399px) {
+            padding: 20px;
+        }
+        @media only screen and (max-width: 1199px) {
+             font-size: 15px;
+        }
+        @media only screen and (max-width:991px) {
+            max-width: 200px;
+            font-size: 14px;
+            padding: 20px 10px;
+        }
+        @media only screen and (max-width:360px) {
+            font-size: 12px;
+            padding: 15px;
+        }
         &.active {
             background: #0057FF;
             color: var(--color-white);
@@ -914,16 +1020,31 @@ p.sub-para {
     justify-content: center;
     gap: 10px;
     margin-bottom: 100px;
+    @media only screen and (max-width:991px) {
+        margin-bottom: 50px;
+    }
+    @media only screen and (max-width:575px) {
+        font-size: 14px;
+    }
 }
 .mb-70 {
     margin-bottom: 70px;
+    @media only screen and (max-width:991px) {
+        margin-bottom: 40px;
+    }
 }
 .member-checkbox {
     width: 75%;
     margin-left: auto;
     margin-right: auto;
+    @media only screen and (max-width:575px) {
+        width: 100%;
+    }
     li {
         margin-bottom: 50px;
+        @media only screen and (max-width:991px) {
+            margin-bottom: 30px;
+        }
         .checkbox-container {
             padding: 0;
         }
@@ -935,5 +1056,8 @@ p.sub-para {
 .auth-form {
     .mb-100 {
         margin-bottom: 100px;
+        @media only screen and (max-width:991px) {
+            margin-bottom: 50px;
+        }
     }
 }
